fix: mobile code snippet to be scrollable It's difficult to read the code snippet in mobile and it's ugly tho. So I updated the <pre> css style to enable overflow on x direction. The result is all code snippet inside <pre> will not extend the padding into oblivion.

--- a/statics/styles.css
+++ b/statics/styles.css
@@ -529,6 +529,7 @@ code {
 }
 
 pre {
+  overflow-x: auto;
   text-wrap: wrap;
   border-radius: 0.25rem;
   border-width: 2px;
